[gd_scene load_steps=11 format=3 uid="uid://dnuxboxdulw4k"]

[ext_resource type="Script" path="res://src/map/map.gd" id="1_6kf0m"]
[ext_resource type="Shader" path="res://shaders/texture_3D.gdshader" id="2_tuh66"]
[ext_resource type="Texture2D" uid="uid://cj77hir4fwbfj" path="res://textures/environment/grass_01.png" id="3_el7mb"]
[ext_resource type="Texture2D" uid="uid://d3l1w8s7ku206" path="res://textures/map/tree.png" id="4_77wie"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_0krmm"]
size = Vector2(1154, 1154)

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_y8fa8"]
size = Vector2(1154, 1154)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_rcy4q"]
render_priority = 0
shader = ExtResource("2_tuh66")
shader_parameter/albedo = ExtResource("3_el7mb")
shader_parameter/flip_h = false

[sub_resource type="QuadMesh" id="QuadMesh_vvqva"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_kt05t"]
render_priority = 0
shader = ExtResource("2_tuh66")
shader_parameter/albedo = ExtResource("4_77wie")
shader_parameter/flip_h = false

[sub_resource type="QuadMesh" id="QuadMesh_ywn5p"]
size = Vector2(0.3, 0.3)

[node name="Map" type="Node3D"]
script = ExtResource("1_6kf0m")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 5, 2)
current = true
size = 250.0

[node name="TranslucentCover" type="Sprite3D" parent="."]
transform = Transform3D(1000, 0, 0, 0, -4.37114e-05, -1000, 0, 1000, -4.37114e-05, 0, -9, 0)
visible = false
modulate = Color(6.69017e-06, 0.741291, 0.415732, 1)
texture = SubResource("PlaceholderTexture2D_0krmm")

[node name="Sprite3D2" type="Sprite3D" parent="."]
transform = Transform3D(1000, 0, 0, 0, -4.37114e-05, -1000, 0, 1000, -4.37114e-05, 0, -10, 0)
modulate = Color(0.362022, 0.808241, 1, 1)
texture = SubResource("PlaceholderTexture2D_y8fa8")

[node name="ViewDeck" type="Button" parent="."]
offset_left = 1757.0
offset_top = 914.0
offset_right = 1817.0
offset_bottom = 974.0
scale = Vector2(2.16736, 2.28852)
focus_mode = 0
text = "View
Deck"

[node name="BankControl" type="Control" parent="."]
layout_mode = 3
anchor_left = 0.82
anchor_top = 0.02
anchor_right = 0.98
anchor_bottom = 0.1
grow_horizontal = 0

[node name="DollarText" type="Label" parent="BankControl"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.2
anchor_bottom = 1.0
theme_override_font_sizes/font_size = 48
text = "$"
horizontal_alignment = 2

[node name="BankText" type="Label" parent="BankControl"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.2
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
grow_vertical = 2
theme_override_font_sizes/font_size = 58
text = "69420"
horizontal_alignment = 2
vertical_alignment = 2

[node name="Tree" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0.5, 0)
visible = false
material_override = SubResource("ShaderMaterial_rcy4q")
mesh = SubResource("QuadMesh_vvqva")

[node name="Tree2" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0.5, 0)
visible = false
material_override = SubResource("ShaderMaterial_kt05t")
gi_lightmap_scale = 3
mesh = SubResource("QuadMesh_ywn5p")
metadata/_edit_group_ = true

[connection signal="pressed" from="ViewDeck" to="." method="_on_view_deck_pressed"]
